sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:5: error: type mismatch;
 found   : Unit
 required: Boolean
	while (echange_pos=true){
                          ^